Dark mode fixes (#1322)

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -494,6 +494,8 @@ $card-ribbon-margin: .25rem !default;
 $card-ribbon-border-radius: var(--#{$prefix}border-radius) !default;
 $card-ribbon-font-size: $h6-font-size !default;
 
+$card-header-tabs-bg: var(--#{$prefix}bg-surface-secondary) !default;
+
 $cards-grid-gap: 1rem !default;
 $cards-grid-breakpoint: lg !default;
 
@@ -595,9 +597,11 @@ $nav-bordered-link-active-border-width: 2 * $border-width !default;
 $nav-bordered-margin-x: 1.25rem !default;
 
 $nav-tabs-border-color: var(--#{$prefix}border-color) !default;
+$nav-tabs-border-radius: var(--#{$prefix}border-radius) !default;
 $nav-tabs-link-hover-border-color: $nav-tabs-border-color $nav-tabs-border-color $nav-tabs-border-color !default;
 $nav-tabs-link-active-border-color: $nav-tabs-link-hover-border-color !default;
 $nav-tabs-link-active-color: var(--#{$prefix}body-color) !default;
+$nav-tabs-bg: var(--#{$prefix}bg-surface-secondary) !default;
 
 
 // Navbar
@@ -611,11 +615,13 @@ $navbar-light-color: var(--#{$prefix}body-color) !default;
 $navbar-light-brand-color: var(--#{$prefix}body-color) !default;
 $navbar-light-active-color: var(--#{$prefix}body-color)color !default;
 $navbar-light-disabled-color: var(--#{$prefix}disabled-color) !default;
+$navbar-light-active-bg: rgba(0, 0, 0, .06) !default;
 
 $navbar-dark-color: rgba($white, $text-muted-opacity) !default;
 $navbar-dark-brand-color: $white !default;
 $navbar-dark-active-color: $white !default;
 $navbar-dark-disabled-color: var(--#{$prefix}disabled-color) !default;
+$navbar-dark-active-bg: rgba(255, 255, 255, .06) !default;
 
 $navbar-brand-padding-y: $nav-link-padding-y !default;
 $navbar-brand-image-height: 2rem !default;
@@ -628,12 +634,12 @@ $navbar-toggler-padding-x: 0 !default;
 $navbar-toggler-padding-y: 0 !default;
 $navbar-toggler-animation-time: .2s !default;
 $navbar-toggler-focus-width: 0 !default;
+$navbar-overlap-height: 9rem !default;
 
 $navbar-nav-link-padding-x: $nav-link-padding-x !default;
 
 $navbar-active-border-color: var(--#{$prefix}primary) !default;
 
-$navbar-overlap-height: 9rem !default;
 
 // Sidebar
 $sidebar-width: 15rem !default;
