--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -34,9 +34,9 @@ body:not(.theme-dark) .hide-theme-light {
     --#{$prefix}card-bg-rgb: #{to-rgb($dark-mode-darken)};
     --#{$prefix}card-color: #{$dark-mode-text};
 
-    --#{$prefix}border-color: #{$dark-mode-border-color};
-    --#{$prefix}border-color-light: #{$dark-mode-border-color-light};
-    --#{$prefix}border-color-active: #{$dark-mode-border-color-active};
+    --#{$prefix}border-color: var(--#{$prefix}dark-mode-border-color);
+    --#{$prefix}border-color-light: var(--#{$prefix}dark-mode-border-color-light);
+    --#{$prefix}border-color-active: var(--#{$prefix}dark-mode-border-color-active);
 
     --#{$prefix}btn-color: #{$dark-mode-darken};
 
