--- a/src/scss/layout/_root.scss
+++ b/src/scss/layout/_root.scss
@@ -29,6 +29,10 @@
   --#{$prefix}code-color: #{$code-color};
   --#{$prefix}code-bg: #{$code-bg};
 
+  --#{$prefix}dark-mode-border-color: #{$dark-mode-border-color};
+  --#{$prefix}dark-mode-border-color-light: #{$dark-mode-border-color-light};
+  --#{$prefix}dark-mode-border-color-active: #{$dark-mode-border-color-active};
+
 
   @each $name, $value in $font-weights {
     --#{$prefix}font-weight-#{$name}: #{$value};
